[project]
name = "backup-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "ahmedaao",email = "ahmed.ait.ouazzou@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]

[tool.poetry]
packages = [{include = "backup_manager", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
